--- a/CinemaOnline/Views/Account/Index.cshtml
+++ b/CinemaOnline/Views/Account/Index.cshtml
@@ -71,8 +71,7 @@
         display: inline-block;
         font: normal normal normal 14px/1 FontAwesome;
         font-size: inherit;
-        text-
-            ing: auto;
+        text-rendering: auto;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
