fix booking ticket

--- a/CinemaOnline/Areas/Admin/Views/MovieCalendar/Index.cshtml
+++ b/CinemaOnline/Areas/Admin/Views/MovieCalendar/Index.cshtml
@@ -113,7 +113,7 @@
             <div class="row">
                 <!-- Pagination -->
                 <div class="Page navigation text-center">
-                    @Html.PagedListPager(Model, page => "/" + "admin/movieCalendar" + "?page=" + page)
+                    @Html.PagedListPager(Model, page => "/" + "admin/movieCalendar" + "?page=" + page + "&roomId=" + ViewBag.RoomId)
                 </div>
             </div>
         </div>
