--- a/CinemaOnline/Views/Shared/_Layout.cshtml
+++ b/CinemaOnline/Views/Shared/_Layout.cshtml
@@ -3,12 +3,12 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>AMovie - @(ViewBag.Title ?? "Trang chủ")</title>
+    <title>MeetFlix - @(ViewBag.Title ?? "Trang chủ")</title>
     <meta name="description" content="zFrame Team">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="zFrame">
 
-    <link rel="shortcut icon" href="~/Content/images/film.ico" />
+    <link rel="shortcut icon" href="~/Content/images/m-icon.png" />
 
     <!-- Mobile Specific Metas-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,12 +48,13 @@
     <link href="~/Content/plugin/notifyjs/lobibox.min.css" rel="stylesheet" />
 
     <link href="~/Content/alertify/alertify.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 
     @RenderSection("CSS", required: false)
     <style>
-        .ajs-message{
-            color:white!important;
+        .ajs-message {
+            color: white !important;
         }
     </style>
 </head>
